--- a/themes/feuerwehr-hungen/templates/modular/video-cards.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/video-cards.html.twig
@@ -54,7 +54,7 @@
                             {% for entry in directory_list.filterBy({published: true}) %}
                             <div class="card" id="video-card-{{ loop.index }}">
                                 <div class="card-image">
-                                    <video controls width="100%">
+                                    <video controls width="100%" poster="{{ url('user/images/videos/' ~ entry.poster_image) }}">
                                         <source src="{{ url('user/images/videos/' ~ entry.cardVideo) }}" type="video/{{ entry.cardVideo|regex_replace('/^[^.]*\./', '') }}">
                                         Your browser does not support the video tag.
                                     </video>
