Add webshop text component

--- a/themes/feuerwehr-hungen/scss/shop.scss
+++ b/themes/feuerwehr-hungen/scss/shop.scss
@@ -21,6 +21,12 @@ h1 {
   margin: 1rem 0;
 }
 
+.text-container {
+  position: relative;
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
 .cart-h4 {
   margin-top: 0;
   padding: 0;
