Update navcards linking with external option

--- a/themes/feuerwehr-hungen/templates/modular/nav-cards.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/nav-cards.html.twig
@@ -9,7 +9,11 @@
 
             {% for card in page.header.cards %}
             <div class="column card-column col-4 col-md-6 col-sm-12 ">
+                {% if car.external %}
+                    <a href="{{ card.external|e }}">
+                {% else %}
                 <a href="{{ card.link|e }}">
+                {% endif %}
                 <div class="card-hero">
                     <img class="hero-profile-img" src="{{ url('user/images/navCards-images/' ~ card.bg_image) }}" alt="">
                     <div class="hero-description-bk" style="background-image: linear-gradient(0deg , {{ card.gradient1 }}, {{ card.gradient2 }});"></div>
