--- a/themes/feuerwehr-hungen/templates/modular/nav-cards.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/nav-cards.html.twig
@@ -10,7 +10,7 @@
             {% for card in page.header.cards %}
             <div class="column card-column col-4 col-md-6 col-sm-12 ">
                 {% if card.external %}
-                    <a href="{{ card.external|e }}">
+                    <a href="{{ card.external|e }}" target="_blank">
                 {% else %}
                 <a href="{{ card.link|e }}">
                 {% endif %}
