--- a/themes/feuerwehr-hungen/templates/modular/webshop.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/webshop.html.twig
@@ -55,6 +55,7 @@
 </div>
 <div class="mobile-cart-footer">
     <button class="mobile-cart-button">
-        <i class="fa-solid fa-cart-shopping"></i> Warenkorb (<span class="mobile-noOfItems">0 Produkte</span>)
+        <span class="button-content-placeholder">
+            </span>
     </button>
 </div>
