--- a/themes/feuerwehr-hungen/templates/modular/nav-cards.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/nav-cards.html.twig
@@ -10,9 +10,9 @@
             {% for card in page.header.cards %}
             <div class="column card-column col-4 col-md-6 col-sm-12 ">
                 {% if card.external %}
-                    <a href="{{ card.external|e }}" target="_blank">
+                    <a href="{{ card.external|e }}" target="_blank" class="navcard-link">
                 {% else %}
-                <a href="{{ card.link|e }}">
+                <a href="{{ card.link|e }}" class="navcard-link">
                 {% endif %}
                 <div class="card-hero">
                     <img class="hero-profile-img" src="{{ url('user/images/navCards-images/' ~ card.bg_image) }}" alt="">
