Reduce navcards size for mobile and fix mobile menu effect

--- a/themes/feuerwehr-hungen/scss/theme/_mobile.scss
+++ b/themes/feuerwehr-hungen/scss/theme/_mobile.scss
@@ -251,6 +251,10 @@
   transition: all 275ms 375ms
 }
 
+.overlay-menu li:nth-child(6) a {
+  transition: all 275ms 375ms
+}
+
 /* Decoration */
 .overlay-menu ul,
 .overlay-menu li {
