--- a/themes/feuerwehr-hungen/scss/nav-cards.scss
+++ b/themes/feuerwehr-hungen/scss/nav-cards.scss
@@ -82,3 +82,19 @@
 .navcard-link {
   display: grid;
 }
+
+@media screen and (max-width: 850px) {
+  .card-hero {
+    width: 300px;
+    height: 350px;
+  }
+
+  .hero-description {
+    left: 135px;
+    bottom: 2%;
+  }
+  .ag-courses-item_title {
+    font-size: 1.9rem;
+  }
+}
+
