--- a/themes/feuerwehr-hungen/templates/modular/webshop-orders.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/webshop-orders.html.twig
@@ -277,7 +277,7 @@
 <section class="section">
     <section class="container order-container">
         <h1>Bestellübersicht</h1>
-        <div class="columns">
+        <div class="orders-columns">
             <div class="column col-md-12 col-8">
                 <h2>Einzelne Bestellungen</h2>
                 <div class="table-container">
