Adjust columns behavior for shop columns only

--- a/themes/feuerwehr-hungen/templates/modular/webshop.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/webshop.html.twig
@@ -17,7 +17,7 @@
     </div>
 
     <div class="body">
-        <div class="columns">
+        <div class="columns shop-columns">
             <div class="column col-md-12 col-8">
                 <div class="container shop-container">
 
