--- a/themes/feuerwehr-hungen/scss/profiles.scss
+++ b/themes/feuerwehr-hungen/scss/profiles.scss
@@ -45,7 +45,7 @@
 
   .profile-card {
     position: relative;
-    margin: auto;
+    margin: 20px auto;
     top: 0;
     right: 0;
     bottom: 0;
