--- a/themes/feuerwehr-hungen/templates/modular/profiles.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/profiles.html.twig
@@ -21,27 +21,24 @@
 <section class="modular-profiles">
     <div class="container {{ grid_size }}">
         <div class="profiles-content">
-
-            {{ content|raw }}
-
+            {{ page.header.heading|markdown(true) }}
         </div>
-    {% if page.header.content_align == 'right' and page.header.order_mobile == 'text-first' %}
+        {% if page.header.content_align == 'right' and page.header.order_mobile == 'text-first' %}
         <div class="columns mobile-reorder">
-    {% else %}
-        <div class="columns">
-    {% endif %}
-                {% for profile in page.header.profiles %}
-                    {% if page.header.content_align == 'left' and profile.content %}
+            {% else %}
+            <div class="columns">
+                {% endif %}
 
-                        <div class="column profile-column col-6 col-md-6 col-sm-12 text-column">
+                {% if page.header.content_align == 'left' and content %}
 
-                            {{ profile.content|markdown(true) }}
+                    <div class="column profile-column col-6 col-md-6 col-sm-12 text-column">
+                        {{ content|markdown(true) }}
+                    </div>
+                {% endif %}
 
-                        </div>
-                    {% endif %}
-
-
-                    <div class="column profile-column col-6 col-md-6 col-sm-12 ">
+                    {% if page.header.columns == 'eine' %}
+                     <div class="column profile-column col-6 col-md-6 col-sm-12 ">
+                        {% for profile in page.header.profiles %}
                         <div class="profile-card">
                             <div class="ds-top"></div>
                             <div class="avatar-holder">
@@ -84,16 +81,64 @@
 
                             </div>
                         </div>
+                        {% endfor %}
                     </div>
-                    {% if page.header.content_align == 'right' and profile.content %}
-                        <div class="column profile-column col-6 col-md-6 col-sm-12 text-column">
+                {% else %}
+                {% for profile in page.header.profiles %}
+                <div class="column profile-column col-6 col-md-6 col-sm-12">
+                        <div class="profile-card">
+                            <div class="ds-top"></div>
+                            <div class="avatar-holder">
+                                <img src="user/themes/feuerwehr-hungen/images/profile-images/{{ profile.picked_image }}"
+                                     alt="Albert Einstein">
+                            </div>
+                            <div class="name">
+                                <p>{{ profile.vorname }} {{ profile.name }}</p>
+                                {% if profile.deployment %}
+                                    <h6 title="Einsätze"><i class="fas fa-users"></i> <span
+                                                class="followers">{{ profile.deployment }}</span></h6>
+                                {% endif %}
+                            </div>
+                            <button class="profile-btn">
+                                {{ profile.function }}
+                            </button>
+                            <div class="ds-info">
+                                <div class="ds pens">
+                                    <h6 title="Email"><i class="fa-solid fa-envelope beforI"></i>
+                                        <button class="btn tooltip" onclick="copyToClipboard('{{ profile.email }}')">
+                                            {{ profile.email }} <i class="fa-regular fa-copy"></i><span
+                                                    class="tooltiptext" id="{{ profile.email }}-tooltip"></span>
+                                        </button>
+                                    </h6>
+                                </div>
+                            </div>
+                            <div class="ds-info">
+                                <div class="ds projects">
+                                    {% if profile.tel %}
+                                        <h6 title="Telefon"><i class="fa-solid fa-phone beforI"></i>
+                                            <button class="btn">{{ profile.tel }} <a
+                                                        onclick="copyToClipboard('{{ profile.email }}')"><i
+                                                            class="fa-regular fa-copy"></i></a>
+                                            </button>
+                                        </h6>
+                                    {% endif %}
+                                </div>
+                            </div>
+                            <div class="ds-info">
 
-                            {{ profile.content|markdown(true) }}
-
+                            </div>
                         </div>
-
-                    {% endif %}
+                </div>
                 {% endfor %}
+                {% endif %}
+
+                {% if page.header.content_align == 'right' and content %}
+                    <div class="column profile-column col-6 col-md-6 col-sm-12 text-column">
+                        {{ content|markdown(true) }}
+                    </div>
+
+                {% endif %}
+
             </div>
         </div>
 </section>
