--- a/themes/feuerwehr-hungen/scss/attendance-tracker.scss
+++ b/themes/feuerwehr-hungen/scss/attendance-tracker.scss
@@ -1,3 +1,5 @@
+@import "analogue-clock.scss";
+
 
 .module-content {
   position: relative;
@@ -70,6 +72,58 @@
   .attendance-footer {
     text-align: center;
     margin-top: 0;
+
+    .input-col {
+      position: relative;
+      left: 0;
+    }
+
+    .input-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: start;
+      gap: 16px;
+      font-weight: bold;
+    }
+
+    .time-label {
+      font-size: 0.9rem;
+
+    }
+
+    .time {
+      font-size: 0.9rem;
+      width: 3rem;
+      text-align: center;
+    }
+
+    #endTime-input {
+      margin-left: 8px;
+    }
+
+    #ue-label {
+      font-size: 1.2rem;
+      margin-bottom: -8px;
+      margin-top: -0.6em;
+      padding-left: 0.4em;
+
+    }
+
+    #ue-input {
+      font-size: 1rem;
+      width: 2.5em;
+      margin-top: -5px;
+      padding: 0.5em 0;
+      border: .2em solid #2761c3;
+      border-radius: 0.9em;
+      text-align: center;
+      appearance: textfield;
+      &::-webkit-inner-spin-button {
+        opacity: 1;
+        background: #063480;
+      }
+    }
+
   }
 
 
@@ -110,7 +164,6 @@
     }
   }
 
-
   &__label {
     margin-left: 0.5em;
   }
@@ -128,7 +181,7 @@
 /* Dropdown */
 .event-dropdown {
   max-width: 100%;
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 
 /* Special Button */
@@ -144,6 +197,7 @@
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+  margin-top: 10px;
 }
 
 .button-82-shadow {
@@ -235,5 +289,71 @@
 .button-82-pushable:focus:not(:focus-visible) {
   outline: none;
 }
+/* End of Special Button */
 
 svg:not(:root) { overflow: visible !important; }
+
+
+/* Number input */
+input[type="number"] {
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+}
+
+.number-input {
+  border: 2px solid #ddd;
+  display: inline-flex;
+}
+
+.number-input,
+.number-input * {
+  box-sizing: border-box;
+}
+
+.number-input button {
+  outline:none;
+  -webkit-appearance: none;
+  background-color: transparent;
+  border: none;
+  align-items: center;
+  justify-content: center;
+  width: 1.5rem;
+  height: 1.5rem;
+  cursor: pointer;
+  margin: 0;
+  position: relative;
+}
+
+.number-input button:before,
+.number-input button:after {
+  display: inline-block;
+  position: absolute;
+  content: '';
+  width: 1rem;
+  height: 2px;
+  background-color: #212121;
+  transform: translate(-50%, -50%);
+}
+.number-input button.plus:after {
+  transform: translate(-50%, -50%) rotate(90deg);
+}
+
+.number-input input[type=number] {
+  font-family: sans-serif;
+  max-width: 3rem;
+  padding: .5rem;
+  border: solid #ddd;
+  border-width: 0 2px;
+  font-size: 1rem;
+  height: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+
